Fix trade marker lines and row gap

--- a/src/components/trade-share/TradeShareBuilder.module.css
+++ b/src/components/trade-share/TradeShareBuilder.module.css
@@ -468,7 +468,7 @@
   left: 74px;
   top: 334px;
   width: 234px;
-  height: 170px;
+  height: 164px;
   z-index: 5;
 }
 
